[package]
name = "griptape-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
griptape = { version = "2023.9.19", path = "../griptape" }
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"

[[bin]]
name = "griptape"
path = "src/main.rs"
