[package]
name = "griptape-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
griptape = { path = "../griptape" }
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
clap = "4.5.20"
clap_derive = "4.5.18"
env_logger = "0.11.5"
log = "0.4.22"
toml = "0.8.19"
anyhow = "1.0.91"

[[bin]]
name = "griptape"
path = "src/main.rs"
